Style Application Template Change the background color for the jumbotron class in the header Change the font family, font size and text color for the site name, slogan and home link in the header Change the font family, font size and text alignment for the copright and site name in the footer Add an underscore to the site name Animate the underscore to blink

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,9 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/question-and-answer-message-board.css">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|VT323" rel="stylesheet">
+
     {{content-for "head-footer"}}
   </head>
   <body>
