--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/question-and-answer-message-board.js"></script>
+    <script src="https://use.fontawesome.com/80caa23151.js"></script>
 
     {{content-for "body-footer"}}
   </body>
